syntax = "proto3";

package category;

option go_package = "./category;category_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "trans.proto";
import "common.proto";
import "property_group.proto";
import "_category_preview.proto";
import "product.proto";

service CategoryService {
    rpc createCategory(CategoryCU) returns (category_preview.CategoryPreview);
    rpc updateCategory(CategoryUpdateParams) returns (google.protobuf.Empty);
    rpc getCategoryList(google.protobuf.Empty) returns (CategoryListPrivate);
    rpc getCategoryListPublic(CategoryListSearchParamsPublic) returns (CategoryListPublic);
    rpc getCategory(CategorySearchParams) returns (Category);
    rpc getCategoryPreview(CategorySearchParams) returns (category_preview.CategoryPreview);
    rpc getCategoryListByPropertyGroups(CategoryWithPropertyGroupsSearchParams) returns (CategoryListPrivate);
    rpc deleteCategory(CategorySearchParams) returns (google.protobuf.Empty);
}

// entities

message Category {
    int32 id = 1;
    string url = 2;
    trans.TransData title = 3;
    string icon = 4;
    string iconId = 5;
    bool isPublic = 6;
    string comment = 7;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp updatedAt = 9;
    repeated product.ProductPreview products = 10;
    repeated property_group.PropertyGroupPreview propertyGroups = 11;
}

// requests

message CategoryCU {
    string url = 1;
    trans.TransData title = 2;
    bool isPublic = 3;
    optional common.File icon = 4;
    repeated int32 propertyGroups = 5;
    string comment = 6;
}

message CategoryUpdateParams {
    int32 id = 1;
    CategoryCU data = 2;
}

message CategorySearchParams {
    optional int32 id = 1;
    optional string url = 2;
}

message CategoryWithPropertyGroupsSearchParams {
    int32 propertyGroupId = 1;
}

message CategoryListSearchParamsPublic {
    common.QueryCommonParams queries = 1;
}

// responces

message CategoryListPrivate {
    repeated category_preview.CategoryPreview items = 1;
}

message CategoryListPublic {
    repeated category_preview.CategoryPreviewPublic items = 1;
}
